adding new file

--- a/index.html
+++ b/index.html
@@ -1,62 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-<link rel="stylesheet" href="registration_number.css">
+    <link rel="stylesheet" href="registration_number.css">
+    <title>Registration Number</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <div class="wrapper">
+    <center><font size="10"><i>Registration number plates</i></font></center>
+    <br>
+    <br>
+    <br>
+      <input class="textbox" type="text" name="name" placeholder="type a registration number here"
+      <br>
+       <button class="add" type="button" name="Add" value="Add">ADD</button>
+        <h1>
+        <br>
+        <br>
+      <div class="plates">
+        <p class="numplate">CA 11221</p>
+      </div>
+    </div>
+  </body>
+<script src="registration_number.js" charset="utf-8"></script>
 
-
-        <style media="screen">
-        div {
-    vertical-align: middle;
-    background-color: yellow;
-    width: 600px;
-    border-radius: 30px;
-    border: solid black;
-    padding: 25px;
-    margin: auto;
-}
-</style>
-
-<title>Registration Number</title>
-<center><font size ="10"><u>Registration Number plates</u></h1></center></font>
-<br></br>
-<br></br>
-<meta charset="utf-8">
-<head/>
-
-<body>
-
-<div class="container">
-<center><font size ="7">CA 45679</center></font>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
 </html>
