adding new files

--- a/index.html
+++ b/index.html
@@ -10,18 +10,34 @@
     <center><font size="10"><i>Registration number plates</i></font></center>
     <br>
     <br>
+
     <br>
-      <input class="textbox" type="text" name="name" placeholder="type a registration number here"
-      <br>
-       <button class="add" type="button" name="Add" value="Add">ADD</button>
-        <h1>
+    <br>
+    <br>
+
+    <input class="textbox" name="text" value="" type "text" placeholder="Search here ..">
+      <button class="add" type="button" name="Add" value="Add">ADD</button>
+
+
+    <select id="dropbox">
+  <option value="Towns">Select Towns</option>
+    <option value="CA">Cape Town</option>
+    <option value="CJ">Paarl</option>
+    <option value="CY">Bellville</option>
+    <option value="GP">Gauteng</option>
+    <option value="All">All Towns</option>
+
+  </select>
+
+</div>
         <br>
         <br>
       <div class="plates">
         <p class="numplate">CA 11221</p>
       </div>
     </div>
-  </body>
+   </div>
+</body>
 <script src="registration_number.js" charset="utf-8"></script>
 
 </html>
