adding new changes

--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
     <br>
     <br>
     <br>
-
-    <input class="textbox" name="text" value="" type "text" placeholder="Search here ..">
+<center>
+    <input class="textbox" name="text" value="" type "text" placeholder="type a registration number here ..">
       <button class="add" type="button" name="Add" value="Add">ADD</button>
-
-
+</center>
+<br>
+<br>
+<center>  <div class="plates">
+    <p><div class="numplate">CA 123</p>
+  </div>
+</div>
+</center>
+<center>
     <select id="dropbox">
   <option value="Towns">Select Towns</option>
     <option value="CA">Cape Town</option>
@@ -26,16 +33,13 @@
     <option value="CY">Bellville</option>
     <option value="GP">Gauteng</option>
     <option value="All">All Towns</option>
-
+</center>
   </select>
 
 </div>
-        <br>
-        <br>
-      <div class="plates">
-        <p class="numplate">CA 11221</p>
-      </div>
-    </div>
+
+
+
    </div>
 </body>
 <script src="registration_number.js" charset="utf-8"></script>
